--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -1,15 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    android:background="#000"
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.hsc.mdtouch.Chat"
-    >
+    android:background="#000"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:context="com.example.hsc.mdtouch.Chat">
+
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/chat_toolbar"
+        android:background="@color/colorPrimary"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+    </android.support.v7.widget.Toolbar>
+
 
     <ListView
-        android:divider="#fff"
+        android:dividerHeight="4.0sp"
+        android:layout_below="@+id/chat_toolbar"
+        android:divider="#000"
         android:id="@+id/listview"
         android:padding="4dp"
         android:layout_width="match_parent"
@@ -24,34 +34,47 @@
     <LinearLayout
         android:id="@+id/linearlayout"
         android:layout_alignParentBottom="true"
-        android:background="@color/colorPrimaryDark"
+        android:layout_marginBottom="10dp"
         android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:layout_height="wrap_content">
 
-        <EditText
-            android:background="@null"
-            android:textColor="#000"
-            android:textCursorDrawable="@null"
-            android:layout_gravity="center"
-            android:id="@+id/edittext"
-            android:layout_marginLeft="8dp"
-            android:layout_marginRight="8dp"
+        <android.support.v7.widget.CardView
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="10dp"
+            android:id="@+id/message_card"
+            app:cardCornerRadius="20dp"
+            app:cardBackgroundColor="@color/colorPrimaryDark"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="3"
-            android:hint="Write a message"
-            android:inputType="text"
-            />
+            android:layout_weight="5"
+            android:layout_height="wrap_content">
 
-        <ImageButton
-            android:layout_gravity="center"
-            android:background="@color/colorPrimaryDark"
-            android:id="@+id/sendbutton"
-            android:layout_width="60dp"
-            android:layout_height="60dp"
+            <EditText
+                android:background="@null"
+                android:textColor="#fff"
+                android:textColorHint="#fff"
+                android:textCursorDrawable="@null"
+                android:layout_gravity="center"
+                android:id="@+id/edittext"
+                android:layout_marginLeft="8dp"
+                android:layout_marginRight="8dp"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:hint="Write a message"
+                android:inputType="text"
+                />
+
+        </android.support.v7.widget.CardView>
+
+        <android.support.design.widget.FloatingActionButton
+            app:backgroundTint="@color/colorPrimaryDark"
+            android:layout_marginEnd="10dp"
             android:src="@mipmap/send"
-            />
+            android:id="@+id/sendbutton"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+        </android.support.design.widget.FloatingActionButton>
 
     </LinearLayout>
 
