--- a/app/src/main/res/layout/my_message.xml
+++ b/app/src/main/res/layout/my_message.xml
@@ -9,16 +9,38 @@
     >
 
     <TextView
-        android:layout_marginTop="4dp"
+        android:id="@+id/name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@drawable/my_messages"
+        android:text="Me"
         android:textColor="#fff"
-        android:text="hi hello"
-        android:padding="10dp"
-        android:elevation="2dp"
-        android:textSize="18sp"
         android:layout_alignParentEnd="true"
+
         />
+
+    <RelativeLayout
+        android:layout_below="@+id/name"
+        android:layout_marginStart="50dp"
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="4dp"
+        android:background="@drawable/my_messages"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+
+        <TextView
+            android:id="@+id/message"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="#000"
+            android:text="hi hello"
+            android:padding="10dp"
+            android:elevation="2dp"
+            android:textSize="14sp"
+            />
+
+
+    </RelativeLayout>
+
+
 
 </RelativeLayout>
