--- a/app/src/main/res/layout/other_message.xml
+++ b/app/src/main/res/layout/other_message.xml
@@ -9,8 +9,8 @@
 
     <ImageView
         android:id="@+id/view"
-        android:layout_width="28dp"
-        android:layout_height="28dp"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
         android:src="@drawable/main"
         android:layout_marginStart="4dp"
         android:layout_marginTop="8dp"
@@ -23,7 +23,7 @@
         android:layout_marginStart="8dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="#fff"
+        android:textColor="#000"
         android:text="Virat"
         />
 
@@ -37,11 +37,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/other_messages"
-        android:textColor="#fff"
+        android:textColor="#000"
         android:text="hi hello"
         android:padding="10dp"
         android:elevation="2dp"
-        android:textSize="18sp"
+        android:textSize="14sp"
         />
 
 </RelativeLayout>
